--- a/public/css/helper.css
+++ b/public/css/helper.css
@@ -1,1 +1,24 @@
-helper.css
+tml {
+  font-family: 'Raleway', sans-serif; 
+  
+}
+
+h1 {
+  color: red;
+}
+
+nav.header {
+  background-color:#000
+}
+
+.miss {
+  background-color: blue;
+  color: red;
+  padding:5px;
+  margin:5px
+} 
+
+.hit {
+  background-color:red;
+} 
+
