adding class player and stat

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,5 +6,5 @@
   <input type="submit">
   </form>  
 <% else %>
-  Welcome to the game<%=@name %>
+  Welcome to the game &nbsp <%=@name.capitalize %>
 <% end %>
