--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
   </head>
   <body "style=height: 100%">
     <section style="width: 500px; margin-left: auto; margin-right: auto;">
-        <h1>Rock Paper Scissors Game Play</h1>
+        <h1>Rock Paper Scissors Game</h1>
         <%= yield %>
     </section>
   <footer>
