--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,3 +41,23 @@ footer {
 input{
   font-family: fantasy;
 }
+
+input.rounded {
+    border: 1px solid #ccc;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    -moz-box-shadow: 2px 2px 3px #666;
+    -webkit-box-shadow: 2px 2px 3px #666;
+    box-shadow: 2px 2px 3px #666;
+    font-size: 20px;
+    padding: 4px 7px;
+    outline: 0;
+    -webkit-appearance: none;
+}
+
+14
+input.rounded:focus {}
+    border-color: #339933;
+}
+
