--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,25 +38,31 @@ footer {
   left: 0;
 }
 
+img {
+  width:100%;
+  max-height: 25%;
+  max-width: 25%;
+  height: 10em;
+}
+
 input{
   font-family: fantasy;
 }
 
 input.rounded {
-    border: 1px solid #ccc;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    -moz-box-shadow: 2px 2px 3px #666;
-    -webkit-box-shadow: 2px 2px 3px #666;
-    box-shadow: 2px 2px 3px #666;
-    font-size: 20px;
-    padding: 4px 7px;
+    border: 0.25em solid #ccc;
+    -moz-border-radius: 1em;
+    -webkit-border-radius: 1em;
+    border-radius: 1em;
+    -moz-box-shadow: 2em 2em 3em #666;
+    -webkit-box-shadow: 2em 2px 3em #666;
+    box-shadow: 2em 2em 3em #666;
+    padding: 0em 0em;
     outline: 0;
+    font-size: 1em;
     -webkit-appearance: none;
 }
 
-14
 input.rounded:focus {}
     border-color: #339933;
 }
