final with cucumber tests

--- a/views/index.erb
+++ b/views/index.erb
@@ -22,6 +22,6 @@
     You played with &nbsp <%=@player_move %> against <%=@opponent %>
     <br>
     The opponent move was &nbsp<%=@opponent_move %>
-    The winner is <%=@winner %>
+    The winner is <%=@winner.capitalize %>
   <% end %>
 </h1>
